<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_lay" />

    <ImageView
        android:id="@+id/imgLaunchImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@drawable/launch_image"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintRight_toRightOf="parent"
         />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:hint="@string/email_text"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textColor="@color/secondary_color"
        android:textColorHint="@color/secondary_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:hint="@string/password_text"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textColor="@color/secondary_color"
        android:textColorHint="@color/secondary_color"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_primary_full_filled"
        android:stateListAnimator="@null"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="@color/secondary_color"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />


</android.support.constraint.ConstraintLayout>