<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_lay" />

    <RelativeLayout
        android:id="@+id/rlPaymentTypeMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/rlPaymentPreType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_weight="1"
            android:background="@color/light_blue_color">

            <TextView
                android:id="@+id/tvPaymentPrePaidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/payment_type_prepaid_text"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_color" />

            <TextView
                android:id="@+id/tvPredesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/payment_type_prepaid_des"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_color"
                android:layout_below="@+id/tvPaymentPrePaidText"
                android:layout_alignStart="@+id/tvPaymentPrePaidText"
                android:layout_toLeftOf="@+id/singleChoiceRadioPre"
                app:layout_constraintLeft_toLeftOf="parent" />

            <RadioButton
                android:id="@+id/singleChoiceRadioPre"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/radio_check_mark"
                android:button="@null"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPaymentPostType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_weight="1"
            android:layout_below="@+id/rlPaymentPreType"
            android:background="@color/light_blue_color">

            <TextView
                android:id="@+id/tvPaymentPostPaidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/payment_type_postpaid_text"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_color" />

            <TextView
                android:id="@+id/tvPostdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/payment_type_postpaid_des"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_color"
                android:layout_below="@+id/tvPaymentPostPaidText"
                android:layout_alignStart="@+id/tvPaymentPostPaidText"
                android:layout_toLeftOf="@+id/singleChoiceRadioPost"
                app:layout_constraintLeft_toLeftOf="parent" />

            <RadioButton
                android:id="@+id/singleChoiceRadioPost"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/radio_check_mark"
                android:button="@null"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/paymentButton_text"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/primary_color"
        android:background="@color/secondary_color"
        android:stateListAnimator="@null" />


</androidx.constraintlayout.widget.ConstraintLayout>